// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlainQueryInput empty 1`] = `
<input
  className="form-control text-code lazyMonacoQueryInputIntermediateInput"
  onChange={[Function]}
  spellCheck={false}
  type="text"
  value=""
/>
`;

exports[`PlainQueryInput with query 1`] = `
<input
  className="form-control text-code lazyMonacoQueryInputIntermediateInput"
  onChange={[Function]}
  spellCheck={false}
  type="text"
  value="repo:jsonrpc2 file:async.go asyncHandler"
/>
`;
